[package]
name = "captcha"
version = "0.0.7"
authors = ["daniel-e <git.daniele@gmail.com>"]
description = "Library for generating CAPTCHAs."
license-file = "LICENSE.md"
keywords = ["CAPTCHA"]
readme = "README.md"
exclude = ["gen/*", "captcha.iml", ".idea", "*.png"]
documentation = "https://docs.rs/captcha/"
homepage = "https://github.com/daniel-e/captcha"
repository = "https://github.com/daniel-e/captcha"
edition = "2018"

[dependencies]
image = "0.23.8"
png = "0.16.7"
rand = "0.7.3"
serde_json = "1.0.57"
base64 = "0.12.3"